# models/response.go
@@ -5,3 +5,15 @@ type ResponseData struct {
 	Data interface{} `json:"data"`
 	Message string `json:"message"`
 }
+
+//听力part列表返回体
+type ListeningPartListResponse struct {
+    Items []ListeningPartItem `json:"items"`
+    Total int                 `json:"total"`
+}
+
+//听力套题列表返回体
+type ListeningListResponse struct {
+    Items []ListeningItem 	`json:"items"`
+    Total int               `json:"total"`
+}
